@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Remove the most uses of stringy eval (gh#6) One still remains
+  - Remove dependency on Data::Munge (gh#6)
 
 0.06 2021-10-11 16:57:42 -0600
   - Fixed test bug (rt#133221)
